--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Project</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <header>
-
+       <nav class="nav-container">
+        <div class="logo-container">
+        <img src="images/Frame.png" alt="">
+        <p>Gamer</p>
+        </div>
+        <div class="nav-items-container">
+        <a href="">About Us</a>
+        <a href="">Developers</a>
+        <div class="icons-container">
+        <a href="">Follow Us On</a>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-tiktok"></i> </div>
+        </div>
+       </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
