--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <nav class="nav-container">
         <div class="logo-container">
         <img src="images/Frame.png" alt="">
-        <p>Gamer</p>
+        <p><span class="font-color">G</span>amer</p>
         </div>
         <div class="nav-items-container">
         <a href="">About Us</a>
@@ -26,7 +26,20 @@
        </nav>
     </header>
     <main>
-
+        <section class="banner">
+            <div class="banner-title">
+            <h3>Play Like The</h3>
+            <h1>G.O.A.T.</h1>
+            <p>1-Click instant play</p>
+            <p>No Download</p>
+            <p>1000s of supported online games</p>
+            <button class="btn-primary-1">Sign In</button>
+            <button class="btn-primary-2">Go Rogue</button>
+            </div>
+            <div class="banner-scenery">
+            <img src="images/Group 18.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
