completed online games section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,39 @@
             <img src="images/Group 18.png" alt="">
             </div>
         </section>
+        <section class="online-games">
+        <h3 class="online-game-tittle">Online Games <span class="font-color">Funny Videos</span></h3>
+        <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+      <div>
+        <div class="complete-img">
+        <div class="img-items">
+            <label class="img-1" for="Rectangle">
+                <input type="checkbox" name="" id="Rectangle">Rectangle 5
+            </label>
+        <img src="images/Rectangle 4.png" alt="">
+    </div>
+    <p class="end-part">No Download. No Install.</p>
+</div>
+<div class="complete-img">
+    <div class="img-items">
+    <label class="img-2" for="Rectangle">
+        <input type="checkbox" name="" id="Rectangle">Rectangle 5
+    </label>
+        <img src="images/Rectangle 5.png" alt="">
+    </div>
+    <p class="end-part">Download and enjoy the game</p>
+</div>
+<div class="complete-img">
+    <div class="img-items">
+        <label class="img-3" for="Rectangle">
+            <input type="checkbox" name="" id="Rectangle">Rectangle 7
+        </label>
+        <img src="images/Rectangle 7.png" alt="">
+    </div>
+    <p class="end-part">Download and enjoy the game</p>
+</div>
+      </div>
+    </section>
     </main>
     <footer>
 
