added free games section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,20 @@
     <p class="end-part">Download and enjoy the game</p>
 </div>
       </div>
-    </section>
+</section>
+<section class="free-games">
+    <div class="banner-container">
+    <h3 class="banner-header"><span class="font-color">Play Instantly,</span>
+        No Downloads
+        No Installs.</h3>
+    <p class="game-instruction">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+    </div>
+    <div class="banner-images">
+      <img src="images/Rectangle 55.png" alt="">
+      <img class="style-img" src="images/Rectangle 66.png" alt="">
+    </div>
+</section>
+ 
     </main>
     <footer>
 
