finished the style of game-icon section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,39 @@
       <img class="style-img" src="images/Rectangle 66.png" alt="">
     </div>
 </section>
- 
+     <section class="games-icons">
+    <div class="head-icons">
+    <div class="icons">
+    <img src="images/Rectangle 11.png" alt="">
+    <button>Strategy Games</button> </div>
+    <div class="icons">
+    <img src="images/Rectangle 12.png" alt="">
+    <button>Action Games</button> </div>
+    <div class="icons">
+    <img src="images/Rectangle 13.png" alt="">
+    <button>Adventure Games</button> </div>
+    <div class="icons">
+    <img src="images/Rectangle 14.png" alt="">
+    <button>Arcade Games</button> </div>
+    <div class="icons">
+    <img src="images/Rectangle 15.png" alt="">
+    <button>Educational Games</button> </div>
+     </div>
+    <div class="tell-icons">
+    <div class="icons">
+    <img src="images/Rectangle 16.png" alt="">
+    <button>Word Games</button> </div>
+    <div class="icons">
+    <img src="images/Rectangle 17.png" alt="">
+    <button>Role Palying Games</button> </div>
+    <div class="icons">
+    <img src="images/Rectangle 18.png" alt="">
+    <button>Music & Audio Games</button> </div>
+    <div class="icons">
+    <img src="images/Rectangle 19.png" alt="">
+    <button>Puzzle Games</button> </div>
+    </div>
+    </section>
     </main>
     <footer>
 
