--- a/index.html
+++ b/index.html
@@ -120,7 +120,35 @@
     </section>
     </main>
     <footer>
-
+     <section class="footer">
+        <div class="logo-container">
+            <img src="images/Frame.png" alt="">
+            <p><span class="font-color">G</span>amer</p>
+            </div>
+            <ul>
+               <li>Our Story</li>
+               <li>Games</li>
+               <li>Web Games</li>
+               <li>careers</li>
+               <li>Ssupport</li>
+               <li>My Account</li> 
+            </ul>
+            <div class="font-icons">
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-tiktok"></i></a>
+            <a href=""><i class="fa-brands fa-apple"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    <div>
+        <ul>
+            <li>Terms and Conditions</li>
+            <li>Privacy Policy</li>
+            <li>Cookie Policy</li>
+            <li>Privacy Settings</li>
+        </ul>
+    </div>
+        <p class="gamer">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
     </footer>
 </body>
 </html>
