--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Project</title>
+    <link rel="icon" href="images/Frame.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -121,7 +122,7 @@
     </main>
     <footer>
      <section class="footer">
-        <div class="logo-container">
+        <div class="logo-container div">
             <img src="images/Frame.png" alt="">
             <p><span class="font-color">G</span>amer</p>
             </div>
